make max sapling count for artificial trees configurable, and lower by default, increase default max quads for LOD renderer from 20M to 25M, ensure config loader is always lenient even if gson ever updates to change this behavior, get rid of structure bounding box expansion hack, allow column value overriders to specify which structures they're looking for and what radius they wish to modify, fix compile error that I have no idea where it originated from.